--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ViewAllActivity"></activity>
+        <activity android:name=".ViewAllActivity" />
+        <activity
+            android:name=".DetailsScrollingActivity"
+            android:label="@string/title_activity_details_scrolling"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
