--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,22 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".ViewAllActivity" />
+        <activity
+            android:name=".DetailsScrollingActivity"
+            android:label="@string/title_activity_details_scrolling"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CastDetailsActivity"
+            android:label="@string/title_activity_cast_details">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ViewAllActivity" />
-        <activity
-            android:name=".DetailsScrollingActivity"
-            android:label="@string/title_activity_details_scrolling"
-            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
